[package]
edition = "2024"
name = "public-api"
version = "0.50.1"
description = "List and diff the public API of Rust library crates. Relies on rustdoc JSON output from the nightly toolchain."
homepage = "https://github.com/cargo-public-api/cargo-public-api/tree/main/public-api"
documentation = "https://docs.rs/public-api"
readme = "README.md"
keywords = ["semver", "rustdoc-json", "diff", "cargo"]
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api/tree/main/public-api"

[features]
default = ["snapshot-testing"]
snapshot-testing = ["dep:snapshot-testing"]

[dependencies]
hashbag = { version = "0.1", default-features = false }
thiserror = "2.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["unbounded_depth"]

[dependencies.snapshot-testing]
version = "0.1"
optional = true

[dependencies.rustdoc-types]
version = "0.56"

[dev-dependencies]
anyhow = "1.0"
assert_cmd = "2.1"
pretty_assertions = "1.4"
snapshot-testing = "0.1"
tempfile = "3.23"

[dev-dependencies.itertools]
version = "0.14"
default-features = false

[dev-dependencies.rustdoc-json]
path = "../rustdoc-json"
version = "0.9"

[dev-dependencies.predicates]
version = "3.1"
default-features = false
