[package]
name = "release-helper"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies.clap]
version = "4.5"
features = ["derive", "wrap_help"]

[dependencies.jiff]
version = "0.2"
default-features = false
features = ["alloc"]

[dependencies]
semver = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
